Add description for SBT_OPTS.